--- a/pr.tex
+++ b/pr.tex
@@ -34,7 +34,7 @@
 
 \section{Android Manifest}
     \begin{itemize}
-    	\item Описание проекта, в том числе настройки и конфигурация.
+    	\item Описание проекта, в том числе настройки и конфигурации(например, версии).
     	\item Прописаны permission и составляющие проекта, такие как:
 		\begin{enumerate}
         	\item Activity 
@@ -53,7 +53,7 @@
     
 \section{BroadCastReceiver} 
     
-    BroadCastReceiver - класс-обработчик широковещательных сообщений(intent). Может быть подписан на несколько разных интентов. Если к нему приходит несколько интентов за раз, то они выстраиваются в цепочку и обрабатываются по одному, поэтому интент не обрабатывается дольше 5 секунд, чтобы другие не ждали. Из-за этого количество действий, которое вы можете сделать с помощью BroadCastReceiver, довольно ограничено(обычное использование - послать другой интент, чтобы запустить Activity, Service или что-нибудь подобное).
+    BroadCastReceiver - класс-обработчик широковещательных сообщений(intent). Может быть подписан на несколько разных интентов. Если к нему приходит несколько интентов за раз, то они выстраиваются в цепочку и обрабатываются по одному, поэтому Android закрывает интент, если BroadCastReceiver пытается его обрабатывать больше положенного. Из-за этого количество действий, которое вы можете сделать с помощью BroadCastReceiver, довольно ограничено(обычное использование - послать другой интент, чтобы запустить Activity, Service или что-нибудь подобное).
     
     Другое назначение BroadCastReceiver это получать системные оповещения, такие как оповещения о маленьком заряде батарейки или о том, что Android загрузился.
     
@@ -79,7 +79,7 @@ PendingIntent.getBroadcast(this, 0, intent, PendingIntent.FLAG_UPDATE_CURRENT);
 	\begin{itemize}
     \item Получаем доступ к LocationManager
 	\item Создаем Intent и прописываем класс, куда интент должен быть направлен.
-	\item Создаем PendingIntent от нашего Intent.
+	\item Рассылаем этот Intent, как широковещательное сообщение.
     \end{itemize}
 	Класс Intent - это такой способ общаться между частями приложения. В него можно записать дополнительную информацию.
         \begin{lstlisting}
@@ -99,7 +99,7 @@ Location location = (Location) intent.getExtras().get(locationKey);
       \end{itemize}
       В коде выше интент - explicit. 
     
-    Когда приходит интент, который предназначен для данного BroadCastReceiver, вызывается метод onReceive(). Одним из его аргументов является экземпляр класса Context - базовый класс для частей приложения. Через него можно обращаться к ресурсам системы. К примеру, Activity - наследник класса Context. Поэтому, мы можем вызвать, к примеру, метод getSystemService(), определённый в классе Context - для доступа к какому-то сервису. А вот BroadCastReceiver не является наследником класса Context, но доступ к различным менеджерам может понадобиться, поэтому контекст и передаётся методу onReceive(). 
+    Когда приходит интент, который предназначен для данного BroadCastReceiver, вызывается метод onReceive(). Одним из его аргументов является экземпляр класса Context - базовый класс для частей приложения. Через него можно обращаться к ресурсам Android. К примеру, Activity - наследник класса Context. Поэтому, мы можем вызвать, к примеру, метод getSystemService(), определённый в классе Context - для доступа к какому-то сервису. А вот BroadCastReceiver не является наследником класса Context, но доступ к различным менеджерам может понадобиться, поэтому контекст и передаётся методу onReceive(). 
     
         В нашем Receiver мы просто напечатаем в Log некое сообщение(что такое Log мы поподробнее ещё обсудим). 
         
